<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Layout_Margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/Title_Column">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPuja"
            android:id="@+id/tv_pujaTitle"
            style = "@style/Title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btn_pujaDel"
                android:textSize="@dimen/button_text1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btn_pujaAdd"
                android:textSize="@dimen/button_text1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/First_Column">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pajaName"
            android:id="@+id/textView3"
            android:textSize="@dimen/text1"/>

        <TextView
            style="@style/Colon_Text" />

        <Spinner
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:id="@+id/spn_pujaName"
            android:textSize="@dimen/text1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Others_Column1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:id="@+id/textView4"
            android:textSize="@dimen/text1"/>

        <TextView
            style="@style/Colon_Text" />

        <TextView
            android:id="@+id/tv_pujaStartDate"
            style="@style/Date_Text"/>

        <Button
            android:id="@+id/btn_pujaStartDate"
            style="@style/Date_Button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="~"
            android:id="@+id/textView5"
            android:textSize="@dimen/text1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/tv_pujaStopDate"
            style="@style/Date_Text"/>


        <Button
            android:id="@+id/btn_pujaStopDate"
            style="@style/Date_Button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Others_Column1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:id="@+id/textView6"
            android:textSize="@dimen/text1"/>

        <TextView
            style="@style/Colon_Text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="132dp"
            android:id="@+id/edt_pujaNote"
            android:layout_weight="0.93"
            android:textSize="@dimen/text1"/>

    </LinearLayout>
</LinearLayout>