<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jackyc58.pujamanagement.MainActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/btn_pujaSignUp"
        android:text="@string/pujaSignUp"
        android:textSize="@dimen/button_text1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/btn_member"
        android:text="@string/memberData"
        android:textSize="@dimen/button_text1"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btn_pujaSignUp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/btn_pujaList"
        android:text="@string/pujaList"
        android:textSize="@dimen/button_text1"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/btn_member"
        android:layout_alignStart="@+id/btn_member" />
</RelativeLayout>
